gobmkida/c2/count_common_libs
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/count_common_libs/src/engine/board.c:2528:4: error: use of undeclared identifier 'byte_9B389F'
|| byte_9B389F[v20] == v17 && string[239].neighborlist[v20 + 160] == string_number[v10] 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/count_common_libs/src/engine/board.c:2529:4: error: use of undeclared identifier 'byte_9B388C'
|| byte_9B388C[v20] == v17 && string[239].neighborlist[v20 + 141] == string_number[v10] 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/count_common_libs/src/obj/1/board.o] Error 1
